# local-video-ai-assistant

./: .gitignore  README.md  package-lock.json  package.json
backend/: ai_engine.py  build_backend_exe.ps1  mcp_server.py  requirements.txt  schema.proto  schema_pb2.py  schema_pb2_grpc.py  server.py  server.spec  test_transcribe.py
backend/tests/: test_server.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
launcher/: Program.cs
submission/: README.md
submission/checklist/: final-summary.md
submission/docs/: environment-notes.md  run-proof.txt
submission/generated-outputs/pptx/: video_key_points_presentation_how_to_preserve_your_private_life_in_the_age_of_social_media_ted_shorts_socialmedia_20260706_203053.pptx  video_key_points_presentation_how_to_preserve_your_private_life_in_the_age_of_social_media_ted_shorts_socialmedia_20260706_204835.pptx
